--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@ $(window).focus(function(){
 </head>
 <body id="png" onclick="document.getElementById("male").blur();">
 <div class="action">
-  <div class="col-sm-4">
-    <h1 style="text-align: center;padding-top: 1em; "><a href="../" style="text-decoration: none;color: white;" >Ek PAHAL</a> </h1>
+  <div class="col4">
+    <h1 style="text-align: center;padding-top: 8%;">Ek PAHAL</h1>
   </div>
-  <div class="col-sm-8" style="padding-top: 5em;">
+  <div style="padding-top: 5%;padding-right: 4%;" class="col8">
     <div id="nav" >
         <div class="dropdown"  id="raj">
           <span id="menu" class="sliding-middle-out">About Us</span>
@@ -62,7 +62,7 @@ $(window).focus(function(){
           <span id="menu" class="sliding-middle-out">Get Involved</span>
           <div class="dropdown-content">
               <table id="tab">
-                <tr><td><a id="lk" href="https://docs.google.com/forms/d/1g0-RCaM7vIrjPj4oEMPXwFbXPq9rIBFIq5eHzJODRIc/viewform?edit_requested=true">Donate Time</a></td></tr>
+                <tr><td><a id="lk" href="https://docs.google.com/forms/d/e/1FAIpQLSeqXmylWXPt0xyHzFpbLFYLcUJP1USnYx9mhT0PGjKcImU0UQ/viewform">Donate Time</a></td></tr>
                 <tr><td><a id="lk" href="../donate-resource">Donate Resources</a></td></tr>
               </table>
             </div>
